Ability to specify tags view order
