# internal/entities/tag.go
@@ -7,8 +7,9 @@ import (
 )
 
 type Tag struct {
-	ID   int    `json:"id" sql:"id" bson:"id"`
-	Name string `json:"name" sql:"name" bson:"name"`
+	ID        int    `json:"id" sql:"id" bson:"id"`
+	Name      string `json:"name" sql:"name" bson:"name"`
+	ViewOrder int    `json:"view_order" sql:"view_order" bson:"view_order"`
 }
 
 type Tags []int
